--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -40,7 +40,7 @@ body {
 	background: #ffffff;
 	color: #333333;
 	margin: 0 auto;
-	max-width: 960px;
+	max-width: 1200px;
 	overflow-x: hidden; /* prevents box-shadow causing a horizontal scrollbar in firefox when viewport < 960px wide */
 	   -moz-box-shadow: 0 0 0.3em #255b17;
 	-webkit-box-shadow: 0 0 0.3em #255b17;
@@ -48,11 +48,11 @@ body {
 }
 
 #banniere {
-	background-color: #abbf78;
+	background-color: #3789bc;
 }
 
 .banniereImage {
-    margin-left: 30%;
+    margin-left: 45%;
 }
 /* replace with .no-boxshadow body if you have modernizr available */
 .ie6 body,
@@ -111,7 +111,7 @@ img {
 }
 
 .footer {
-	background: #abbf78;
+	background: #3789bc;
 	color: #000;
 	clear: both;
 	font-size: 0.8em;
